Sec5_Chap36-XXX: optimized/cleaned code