@@ -17,7 +17,6 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
@@ -25,7 +24,6 @@ import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -66,7 +64,7 @@ class BeerOrderServiceImplTest {
                 .build();
         testBeer.setId(1);
 
-        // Create test beer order line
+        // Create a test beer order line
         testBeerOrderLine = BeerOrderLine.builder()
                 .orderQuantity(2)
                 .quantityAllocated(2)
@@ -75,7 +73,7 @@ class BeerOrderServiceImplTest {
                 .build();
         testBeerOrderLine.setId(1);
 
-        // Create test beer order
+        // Create a test beer order
         testBeerOrder = BeerOrder.builder()
                 .customerRef("Test Customer")
                 .paymentAmount(new BigDecimal("25.98"))
@@ -84,7 +82,7 @@ class BeerOrderServiceImplTest {
         testBeerOrder.setId(1);
         testBeerOrder.addBeerOrderLine(testBeerOrderLine);
 
-        // Create test beer order line DTO
+        // Create a test beer order line DTO
         testBeerOrderLineDto = BeerOrderLineDto.builder()
                 .id(1)
                 .beerId(1)
@@ -96,7 +94,7 @@ class BeerOrderServiceImplTest {
                 .status("ALLOCATED")
                 .build();
 
-        // Create test beer order DTO
+        // Create a test beer order DTO
         Set<BeerOrderLineDto> lines = new HashSet<>();
         lines.add(testBeerOrderLineDto);
         testBeerOrderDto = BeerOrderDto.builder()
@@ -111,7 +109,7 @@ class BeerOrderServiceImplTest {
     @Test
     void getAllBeerOrders() {
         // Given
-        when(beerOrderRepository.findAll()).thenReturn(Arrays.asList(testBeerOrder));
+        when(beerOrderRepository.findAll()).thenReturn(List.of(testBeerOrder));
         when(beerOrderMapper.beerOrderToBeerOrderDto(testBeerOrder)).thenReturn(testBeerOrderDto);
 
         // When
@@ -119,7 +117,7 @@ class BeerOrderServiceImplTest {
 
         // Then
         assertThat(beerOrders).hasSize(1);
-        assertThat(beerOrders.get(0).getCustomerRef()).isEqualTo("Test Customer");
+        assertThat(beerOrders.getFirst().getCustomerRef()).isEqualTo("Test Customer");
         verify(beerOrderRepository, times(1)).findAll();
         verify(beerOrderMapper, times(1)).beerOrderToBeerOrderDto(any(BeerOrder.class));
     }
